testcases/malgo/error/ErrorKind.mlg
module ErrorKind = {
  id : a -> a;
  id = {x -> x};
  main = { id 42# };
}